<resources>
    <string name="app_name">riseup_labs_assessment</string>
    <string name="app_name_new">RiseUpLabs Assessment</string>
    <string name="developed_for">Developed for</string>
    <string name="team_travers">Riseup Labs</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email_hint">Enter email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_me">Remember Me</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="loading">Loading....</string>
    <string name="register">Register</string>
    <string name="return_to_login">Return To Login</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="phone">Phone</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="tap_here_to_view_profile">Tap here to view profile</string>
    <string name="profile_details">Profile Details</string>
    <string name="username_demo">username</string>
    <string name="all_contents">All Contents</string>
    <string name="content_details">Content Details</string>
    <string name="show_type">Show type</string>
    <string name="language">Language</string>
    <string name="schedule">Schedule</string>
    <string name="rating">Rating</string>
    <string name="search_results">Search Results</string>
    <string name="test_data">Test Data</string>
    <string name="search_results_appears_here">Your search result will appear here</string>
    <string name="content_name">Content name</string>
    <string name="content_status">Content Status</string>
    <string name="time">Time</string>
    <string name="days">Days</string>
    <string name="schedule_on">Scheduled on</string>
</resources>