<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.ContentDetailsActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="2dp"
        android:translationZ="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/md_cyan_600"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_left_arrow_new"
            app:tint="@color/md_white_1000"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/content_details"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/content"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_name"
                android:textSize="18sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/show_type"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/language"
                android:textSize="16sp"
                android:textColor="@color/md_cyan_600"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/content_status"
                android:textSize="14sp"
                android:textColor="@color/md_grey_800"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="14sp"
                    android:gravity="center|left"
                    android:layout_gravity="center|left"
                    android:textColor="@color/md_grey_800"
                    android:hint="@string/rating"
                    android:textColorHint="@color/md_grey_800"
                    android:ellipsize="end"
                    android:maxLines="2"/>

                <SeekBar
                    android:id="@+id/ratingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center"
                    android:maxHeight="6dp"
                    android:minHeight="6dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:progress="0"
                    android:max="10"
                    android:progressDrawable="@drawable/seek_bar_style"
                    android:splitTrack="false"
                    android:thumb="@drawable/custom_thumb" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="14sp"
                    android:gravity="center|left"
                    android:layout_gravity="center|left"
                    android:textColor="@color/md_grey_800"
                    android:hint="@string/schedule_on"
                    android:textColorHint="@color/md_grey_800"
                    android:ellipsize="end"
                    android:maxLines="2"/>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/time"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:textColor="@color/md_grey_800"
                    android:textStyle="bold|italic"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/days"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/md_grey_800"
                    android:paddingBottom="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>