<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_demo_icon"/>

    <TextView
        android:id="@+id/title"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textColor="@color/md_green_800"
        android:textStyle="bold"
        android:textSize="24sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="4dp">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/login_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="5dp"
                android:translationZ="3dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="12dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <RelativeLayout
                        android:id="@+id/usernameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp">

                        <LinearLayout
                            android:layout_below="@+id/usernameText"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:padding="4dp"
                            android:background="@drawable/profile_text_bg"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="42dp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:background="@null"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/enter_username"
                                android:padding="4dp"
                                android:textColor="@color/md_grey_700"
                                android:textColorHighlight="@color/md_grey_700"
                                android:textColorHint="@color/md_grey_700"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/usernameText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginBottom="-10dp"
                            android:layout_alignParentTop="true"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/username"
                            android:background="@color/md_white_1000"
                            android:textColor="@color/md_grey_800"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_below="@id/usernameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp">

                        <LinearLayout
                            android:layout_below="@+id/passwordText"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:padding="4dp"
                            android:background="@drawable/profile_text_bg"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="42dp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center_vertical"
                                android:layout_marginLeft="16dp"
                                android:padding="4dp"
                                android:background="@null"
                                android:inputType="numberPassword"
                                android:hint="@string/password_hint"
                                android:textColor="@color/md_grey_700"
                                android:textColorHighlight="@color/md_grey_700"
                                android:textColorHint="@color/md_grey_700"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/passwordText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginBottom="-10dp"
                            android:layout_alignParentTop="true"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/password"
                            android:background="@color/md_white_1000"
                            android:textColor="@color/md_grey_800"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/loginBtn"
                        android:layout_width="200dp"
                        android:layout_height="42dp"
                        android:layout_margin="16dp"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:gravity="center"
                        app:backgroundTint="@null"
                        android:clickable="true"
                        android:textColor="@color/md_white_1000"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:background="@drawable/button_shape_round_corner"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Not Registered ?"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/registerText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:layout_marginLeft="5dp"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:textColor="@color/md_cyan_800"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
