<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.DashboardActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="2dp"
        android:translationZ="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/md_cyan_600"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_left_arrow_new"
            app:tint="@color/md_white_1000"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_details"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/md_white_1000"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                android:translationZ="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/layoutIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:elevation="4dp"
                        android:translationZ="2dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/rectangle_background_filled"
                        android:gravity="center|left">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_user" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textAllCaps="true"
                        android:textSize="18sp"
                        android:textColor="@color/md_grey_800"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_local_phone"
                            app:tint="@color/md_cyan_600"/>
                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/md_grey_800"
                            android:layout_marginLeft="4dp"
                            android:textSize="16sp"
                            android:text="@string/phone"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>