<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context=".activities.DashboardActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="2dp"
        android:translationZ="4dp"
        android:layout_marginBottom="8dp"
        android:background="@color/md_cyan_600"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_left_arrow_new"
            app:tint="@color/md_white_1000"
            android:padding="8dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dashboard"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tapToViewProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/md_green_800"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_tap"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/tap_here_to_view_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/searchText"
                    android:layout_width="0dp"
                    android:layout_weight=".9"
                    android:layout_height="42dp"
                    android:background="@drawable/edit_text_rectangle_green_light"
                    android:focusable="true"
                    android:hint="@string/enter_your_query"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:maxLength="150"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:scrollHorizontally="true"
                    android:gravity="center"
                    android:textColor="@color/md_green_900"
                    android:textColorHint="@color/md_green_700"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center|right"
                    android:gravity="center|right"
                    android:elevation="6dp"
                    android:translationZ="3dp"
                    android:orientation="vertical"
                    android:background="@drawable/a_roundbg">

                    <ImageView
                        android:id="@+id/Search"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:clickable="true"
                        android:src="@drawable/ic_search_new"
                        app:tint="@color/md_grey_800"
                        android:padding="4dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/md_green_800"
                android:textAllCaps="true"
                android:layout_gravity="center|left"
                android:drawableLeft="@drawable/ic_list"
                android:drawableTint="@color/md_green_800"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:text="@string/all_contents"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contentRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                tools:listitem="@layout/adapter_recycler_content"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>